# HyperHeadset

./: .gitmodules  99-HyperHeadset.rules  ACKNOWLEDGEMENTS  Cargo.toml  FEATURE_CAPABILITIES.md  Headset_protocol.md  README.md  THIRD_PARTY_LICENSES.txt  hyper-headset.desktop
.github/: FUNDING.yml
.github/workflows/: publish-aur-bin.yml  publish-release.yml  rust.yml
old_cloud_2_doc/: FEATURE_CAPABILITIES.md  Headset_protocol.md
src/: airoha_race.rs  bluetooth.rs  lib.rs  main.rs  status_tray.rs  status_tray_not_linux.rs  status_tray_windows.rs  tray_battery_icon_state.rs
src/devices/: cloud_alpha_wireless.rs  cloud_flight_wireless.rs  cloud_ii_core_wireless.rs  cloud_ii_wireless.rs  cloud_ii_wireless_dts.rs  cloud_iii_s_wireless.rs  cloud_iii_wireless.rs  cloud_jet_wireless.rs  cloud_mix_2.rs  cloud_stinger_core_wireless.rs  mod.rs
src/eq/: editor.rs  mod.rs  popup.rs  popup_gtk4.rs  presets.rs  runtime.rs  session.rs
