[package]
name = "hyper_headset"
version = "1.5.0"
edition = "2021"
authors = ["Lennard Kittner"]
description = "A CLI and tray application for monitoring and managing HyperX headsets."

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
hidapi = { path = "vendor/hidapi" }
thistermination = "1.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2.0"
