[package]
name = "hyper_headset"
version = "1.7.1"
edition = "2021"
authors = ["Lennard Kittner"]
description = "A CLI and tray application for monitoring and managing HyperX headsets."

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
enigo = "0.6.1"
hidapi = { path = "vendor/hidapi" }
thistermination = "1.0.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
dirs = { version = "6", optional = true }
notify = { version = "8", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
cfg-if = "1.0.4"

[features]
default = []
eq-support = ["serde", "serde_json", "dirs", "notify"]
eq-editor = ["eq-support", "ratatui", "crossterm"]

[target.'cfg(target_os = "linux")'.dependencies]
dialog = "0.3.0"
ksni = "0.2.0"
shell-escape = "0.1.5"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21.3"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25.10"
winreg = "0.56.0"
windows = { version = "0.62.2", features = [
    "Win32_System_LibraryLoader",
] }
